--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,11 @@
 	background: #000;
 }
 
+video.hidden::-webkit-media-controls-timeline {
+	visibility: hidden;
+	pointer-events: none;
+}
+
 #ravi {
 	width: 32%;
 	height: 100%;
@@ -23,8 +28,12 @@
 	box-sizing: border-box;
 	background: white;
 }
+
 h2 {
 	margin: 5px 0;
+}
+input#rateSlider:disabled {
+	opacity: 0.5;
 }
 #ravi .buttons {
 	position: absolute;
